--- a/interface.xaml
+++ b/interface.xaml
@@ -1,3 +1,4 @@
+$xaml = @"
 <Window xmlns='http://schemas.microsoft.com/winfx/2006/xaml/presentation'
         Title='System Maintenance Tool'
         Height='420' Width='460'
